@@ -11,6 +11,7 @@
 import sys
 from numbers import Integral
 from struct import Struct
+from types import TracebackType
 from typing import (Any, Callable, Dict, Generator, List, NewType, Optional, Tuple, TypeVar,
                     Union)
 
@@ -45,6 +46,7 @@ def test_restify():
     assert restify(None) == ":obj:`None`"
     assert restify(Integral) == ":class:`numbers.Integral`"
     assert restify(Struct) == ":class:`struct.Struct`"
+    assert restify(TracebackType) == ":class:`types.TracebackType`"
     assert restify(Any) == ":obj:`Any`"
 
 
@@ -133,7 +135,8 @@ def test_stringify():
     assert stringify(str) == "str"
     assert stringify(None) == "None"
     assert stringify(Integral) == "numbers.Integral"
-    assert restify(Struct) == ":class:`struct.Struct`"
+    assert stringify(Struct) == "struct.Struct"
+    assert stringify(TracebackType) == "types.TracebackType"
     assert stringify(Any) == "Any"
 
 
